Fixed padding gap on project grid

--- a/assets/less/projects.less
+++ b/assets/less/projects.less
@@ -4,6 +4,7 @@
 
 .projects {
 	padding-top: 2rem;
+	padding-bottom: 2rem;
 }
 
 // Project > Link
