--- a/assets/less/typography.less
+++ b/assets/less/typography.less
@@ -76,7 +76,8 @@
 
 // Titles
 .page-title {
-	margin-bottom: 1rem;
+	margin-top: 2rem;
+	margin-bottom: 2rem;
 	.font__oswald();
 	font-weight: 400;
 	font-size: 2.6rem;
